crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@event_fn_with_return_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/event_fn_with_return_fail.tapir
---
Error: Event 'foo' should not have a return type
   ╭─[event_fn_with_return_fail.tapir:1:1]
   │
 1 │ event fn foo(x: int) -> int {
   │                         ─┬─  
   │                          ╰─── Expected no return type
───╯
